# 5gs-rs

./: .gitignore  CLAUDE.md  Cargo.toml
crates/bin-nf/: Cargo.toml  README.md
crates/common/: Cargo.toml  README.md
crates/common/src/: ProblemDetails.rs  Uri.rs  lib.rs
crates/nrf/: Cargo.toml
crates/nrf-server/: Cargo.toml
crates/nrf-server/src/: main.rs
crates/nrf/src/: config.rs  lib.rs  main.rs
crates/nrf/src/nfdiscovery/: mod.rs
