[package]
name = "ngs-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = {workspace = true}
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
validator = { workspace = true, features = ["derive"] }
