[package]
name = "ngc-nrf-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

ngc-nrf = { workspace = true }
